--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
 
             try {
                 // SUBSTITUA ESTA URL PELA SUA URL DO WEBHOOK N8N
-                const webhookURL = 'https://SEU-N8N-WEBHOOK-URL-AQUI/aila-onboarding';
+                const webhookURL = 'https://n8n-fazeria.tangerinefood.com.br/webhook/aila-onboarding';
                 
                 const response = await fetch(webhookURL, {
                     method: 'POST',
